feat(page): affichage du counter-card sur le tableau de bord + gestion des pages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,10 +1,11 @@
 
 // Import settings and tools
-@import "settings/variables";
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
+
+@import "themes/maxrenov/settings/variables";
 
 // Import generic
 @import "~bootstrap/scss/root";
