--- a/templates/.components/cards/counter-card.html.twig
+++ b/templates/.components/cards/counter-card.html.twig
@@ -2,13 +2,13 @@
     <div class="card-body">
         <div class="d-flex">
             <div class="p-2 flex-grow-1 bd-highlight align-self-center">
-                <i class="fa fa-3x {{ icon }}"></i>
+                <i class="fas fa-3x {{ icon }}"></i>
             </div>
             <div class="p-2 bd-highlight text-end">
                 <h5 class="card-title {{ this.getTextColorClass() }}">{{ value }}</h5>
                 <h5 class="card-text {{ this.getTextColorClass() }}">{{ title | trans }}</h5>
                 <a href="#" class="card-link {{ this.getTextColorClass() }}">
-                    <i class="fa fa-link" aria-hidden="true"></i>
+                    <i class="fas fa-link" aria-hidden="true"></i>
                     {% trans %}Show all{% endtrans %}
                 </a>
             </div>
