--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -4,9 +4,18 @@
     <div class="row">
         <div class="col col-sm-6 col-md-4 col-lg-4 col-xl-3">
             {{ component('counter-card', {
+                bgColor: 'blue',
                 icon: 'fa-users',
                 title: 'Users',
                 value: count.users,
+            }) }}
+        </div>
+        <div class="col col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            {{ component('counter-card', {
+                bgColor: 'green',
+                icon: 'fa-file-lines',
+                title: 'Pages',
+                value: count.pages,
             }) }}
         </div>
     </div>
