feat(dashboard): ajout de la card "Informations du serveur"

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -25,6 +25,9 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
+            <div class="mb-3">
+                {{ component('card-server') }}
+            </div>
         </div>
         <div class="col-12 col-md-6">
             <div class="mb-3">
