--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -28,7 +28,9 @@
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
+@import "components/jumbotron";
 
 // Import utilities
 @import "~bootstrap/scss/helpers/position";
 @import "~bootstrap/scss/utilities/api";
+
