feat(app): installation de fortawesome/fontawesome-free 6.1.1

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,6 +11,10 @@
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
 // Import elements
 @import "~bootstrap/scss/type";
 
