feat(homepage): découpage de la page d'accueil en composant twig

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="mb-3">
-                {{ component('counter-card', {
+                {{ component('card-counter', {
                     bgColor: 'blue',
                     icon: 'fa-users',
                     title: 'Users',
@@ -14,7 +14,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="mb-3">
-                {{ component('counter-card', {
+                {{ component('card-counter', {
                     bgColor: 'green',
                     icon: 'fa-file-lines',
                     title: 'Pages',
