--- a/templates/.forms/media.form.html.twig
+++ b/templates/.forms/media.form.html.twig
@@ -1,6 +1,8 @@
 {% block media_row %}
-    {{ form_label(form) }}
-    {{ form_widget(form) }}
+    <div class="media position-relative">
+        {{ form_label(form) }}
+        {{ form_widget(form) }}
+    </div>
 {% endblock %}
 
 {% block media_widget %}
