feat(carousel): affichage du carousel en page d'accueil

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -32,7 +32,9 @@
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/carousel";
 @import "components/jumbotron";
+@import "components/carousel";
 
 // Import utilities
 @import "~bootstrap/scss/helpers/position";
