--- a/templates/.forms/media.form.html.twig
+++ b/templates/.forms/media.form.html.twig
@@ -9,7 +9,7 @@
     <div class="d-flex">
         <div class="flex-shrink-0">
             {% set src = value is not null and value.path is not null
-                ? asset('uploads/' ~ media.context[value.context].path ~ '/' ~ value.path)
+                ? asset('uploads/' ~ media_manager.context[value.context].path ~ '/' ~ value.path)
                 : 'https://dummyimage.com/150x150/cfcfcf/fff.jpg' %}
 
             <img src="{{ src }}" alt="media" width="150">
