feat(footer): préparation du footer

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -24,6 +24,7 @@
 @import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+@import "objects/footer";
 
 // Import components
 @import "~bootstrap/scss/alert";
