--- a/templates/.components/jumbotrons/home-jumbotron.html.twig
+++ b/templates/.components/jumbotrons/home-jumbotron.html.twig
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-image: url('{{ asset('build/images/wallpaper.jpg') }}')">
+<div class="jumbotron home-jumbotron" style="background-image: url('{{ asset('build/images/wallpaper.jpg') }}')">
     <div class="jumbotron-shadow">
         <div class="container text-center">
             <h1 class="jumbotron-title">
