--- a/templates/.components/footer.html.twig
+++ b/templates/.components/footer.html.twig
@@ -8,42 +8,61 @@
                     Max'Renov. 2022.<br>
                     Développement: Gwennael Jean
                 </div>
+
+                {% if this.hasContact() %}
                 <div class="col-12 col-sm-4 col-center mb-3 mb-sm-0">
                     <div class="title">Contact</div>
                     <ul class="list-unstyled mb-0">
-                        <li>
-                            <i class="fa-solid fa-fw fa-envelope" aria-hidden="true"></i>
-                            maxrenov76@outlook.fr
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-fw fa-phone" aria-hidden="true"></i>
-                            07.61.43.52.52
-                        </li>
+                        {% if mail is not empty %}
+                            <li>
+                                <i class="fa-solid fa-fw fa-envelope" aria-hidden="true"></i>
+                                maxrenov76@outlook.fr
+                            </li>
+                        {% endif %}
+
+                        {% if tel is not empty %}
+                            <li>
+                                <i class="fa-solid fa-fw fa-phone" aria-hidden="true"></i>
+                                07.61.43.52.52
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
-                <div class="col-12 col-sm-4 col-right mb-3 mb-sm-0">
-                    <div class="title">Réseaux sociaux</div>
-                    <div class="mb-1">
-                        <a href="https://twitter.com/La_MaisonJaune">
-                        <span class="fa-stack fa-lg">
-                          <i class="fas fa-circle fa-stack-2x"></i>
-                          <i class="fab fa-twitter fa-stack-1x icon-rs"></i>
-                        </span>
-                        </a>
-                        <a href="https://www.facebook.com/L.MaisonJaune">
-                        <span class="fa-stack fa-lg">
-                          <i class="fas fa-circle fa-stack-2x"></i>
-                          <i class="fab fa-facebook-f fa-stack-1x icon-rs"></i>
-                        </span>
-                        </a>
-                        <a href="https://www.instagram.com/la_maison.jaune/">
-                        <span class="fa-stack fa-lg">
-                          <i class="fas fa-circle fa-stack-2x"></i>
-                          <i class="fab fa-instagram fa-stack-1x icon-rs"></i>
-                        </span>
-                        </a>
+                {% endif %}
+
+                {% if this.hasReseauSocial() %}
+                    <div class="col-12 col-sm-4 col-right mb-3 mb-sm-0">
+                        <div class="title">Réseaux sociaux</div>
+                        <div class="mb-1">
+                            {% if twitter is not empty %}
+                                <a href="https://twitter.com/{{ twitter }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-twitter fa-stack-1x icon-rs"></i>
+                                    </span>
+                                </a>
+                            {% endif %}
+
+                            {% if facebook is not empty %}
+                                <a href="https://www.facebook.com/{{ facebook }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-facebook-f fa-stack-1x icon-rs"></i>
+                                    </span>
+                                </a>
+                            {% endif %}
+
+                            {% if instagram is not empty %}
+                                <a href="https://www.instagram.com/{{ instagram }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-instagram fa-stack-1x icon-rs"></i>
+                                    </span>
+                                </a>
+                            {% endif %}
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </div>
