feat(footer): gestion des paramètres contact et réseaux sociaux

--- a/templates/admin/parameters.html.twig
+++ b/templates/admin/parameters.html.twig
@@ -1,7 +1,7 @@
 {% extends '@EasyAdmin/page/content.html.twig' %}
 
 {% block content_title %}
-    {% trans %}Main Parameters{% endtrans %}
+    {{ title | trans }}
 {% endblock %}
 
 {% block page_actions %}
