feat(google review): préparation du composant

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,4 +26,10 @@
     <div class="mb-3">
         {{ component('gallery-slideshow', { gallery: gallery }) }}
     </div>
+
+    <div class="mb-3">
+        <div class="container">
+            {{ component('google-review') }}
+        </div>
+    </div>
 {% endblock %}
