--- a/templates/.components/google-review.html.twig
+++ b/templates/.components/google-review.html.twig
@@ -1,1 +1,18 @@
-Google Review
+<div class="d-flex flex-column align-items-center">
+    <div>
+        <img src="{{ asset('images/google.png') }}" width="130px"/>
+    </div>
+    <div class="fs-1">
+        {{ googleReview.ratingAverage | number_format(1, ',') }}
+    </div>
+    <div class="d-flex flex-row fs-4" style="color: #F4B400">
+        {{ googleReview.getIconStar(1) | raw }}
+        {{ googleReview.getIconStar(2) | raw }}
+        {{ googleReview.getIconStar(3) | raw }}
+        {{ googleReview.getIconStar(4) | raw }}
+        {{ googleReview.getIconStar(5) | raw }}
+    </div>
+    <div class="fs-5">
+         {{ googleReview.CountReview }} avis
+    </div>
+</div>
