fix(footer): ajout d'une marge en top

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,8 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-        {{ component('footer') }}
+        <div class="mt-3">
+            {{ component('footer') }}
+        </div>
     </body>
 </html>
