feat(home): design du pied de page en mobile

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -34,10 +34,10 @@
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
 @import "~bootstrap/scss/carousel";
-@import "components/jumbotron";
+@import "components/blocs";
 @import "components/carousel";
+@import "components/jumbotron";
 
 // Import utilities
 @import "~bootstrap/scss/helpers/position";
 @import "~bootstrap/scss/utilities/api";
-
