--- a/assets/styles/objects/_footer.scss
+++ b/assets/styles/objects/_footer.scss
@@ -14,4 +14,10 @@
   .icon-rs {
     color: $gray-900 !important;
   }
+
+  @include media-breakpoint-down(xs) {
+    * {
+      text-align: center;
+    }
+  }
 }
