feat(connexion): design du formulaire d'authentification

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -35,6 +35,7 @@
 @import "~bootstrap/scss/navbar";
 @import "~bootstrap/scss/carousel";
 @import "components/blocs";
+@import "components/cards";
 @import "components/carousel";
 @import "components/jumbotron";
 
