--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,19 +4,24 @@
 
 {% block body %}
     <div class="container">
-        {{ form_start(form) }}
-        {% if error %}
-            <div class="alert alert-danger">
-                {{ error.messageKey|trans(error.messageData, 'security') }}
-            </div>
-        {% endif %}
+        <div class="card card-connexion">
+            <div class="card-body">
+                <h2 class="card-title">Connectez-vous</h2>
+                {{ form_start(form) }}
+                {% if error %}
+                    <div class="alert alert-danger">
+                        {{ error.messageKey|trans(error.messageData, 'security') }}
+                    </div>
+                {% endif %}
 
-        {{ form_row(form) }}
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary">
-                Connexion
-            </button>
+                {{ form_row(form) }}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">
+                        Connexion
+                    </button>
+                </div>
+                {{ form_end(form) }}
+            </div>
         </div>
-        {{ form_end(form) }}
     </div>
 {% endblock %}
