feat(topbar): création d'une topbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -38,6 +38,7 @@
 @import "components/cards";
 @import "components/carousel";
 @import "components/jumbotron";
+@import "components/navbars";
 
 // Import utilities
 @import "~bootstrap/scss/helpers/position";
