--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
         {% endblock %}
     </head>
     <body>
+        {{ component('topbar') }}
         {% block body %}{% endblock %}
         <div class="mt-5">
             {{ component('footer') }}
