--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -25,6 +25,7 @@
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
 @import "objects/footer";
+@import "objects/google-review";
 
 // Import components
 @import "~bootstrap/scss/alert";
