--- a/templates/.components/google-review/rating-average.html.twig
+++ b/templates/.components/google-review/rating-average.html.twig
@@ -5,12 +5,8 @@
     <div class="fs-1">
         {{ googleReview.ratingAverage | number_format(1, ',') }}
     </div>
-    <div class="d-flex flex-row fs-4" style="color: #F4B400">
-        {{ googleReview.getIconStar(1) | raw }}
-        {{ googleReview.getIconStar(2) | raw }}
-        {{ googleReview.getIconStar(3) | raw }}
-        {{ googleReview.getIconStar(4) | raw }}
-        {{ googleReview.getIconStar(5) | raw }}
+    <div class="d-flex flex-row fs-4 stars">
+        {{ rating_star(googleReview.ratingAverage, 5) }}
     </div>
     <div class="fs-5">
         {{ googleReview.CountReview }} avis
