--- a/templates/.components/google-review/review.html.twig
+++ b/templates/.components/google-review/review.html.twig
@@ -19,4 +19,9 @@
             </div>
         </div>
     </div>
+    <div class="card-footer text-end">
+        <small class="text-muted">
+            {{ review.time | date('d/m/Y') }}
+        </small>
+    </div>
 </div>
