--- a/templates/.components/google-review.html.twig
+++ b/templates/.components/google-review.html.twig
@@ -1,8 +1,11 @@
-{% if googleReview.ratingAverage is not null %}
+{% if googleReview is not null %}
     <div class="google-review d-flex flex-column flex-md-row align-items-center">
-        <div class="mb-3 mb-md-0 me-md-3 flex-shrink-1">
-            {% include "@component/google-review/rating-average.html.twig" with { googleReview } only %}
-        </div>
+        {% if googleReview.ratingAverage is not null %}
+            <div class="mb-3 mb-md-0 me-md-3 flex-shrink-1">
+                {% include "@component/google-review/rating-average.html.twig" with { googleReview } only %}
+            </div>
+        {% endif %}
+
         <div class="ms-md-3 w-100">
             <div class="row row-cols-1 row-cols-lg-3 g-4">
                 {% for review in googleReview.result.reviews | slice(0, 3) %}
