--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
     <div class="mb-5">
         {{ component('jumbotron', {
-            image: asset('build/images/wallpaper.jpg'),
-            title: "Max'Renov",
-            subtitle: "Artisan électricien",
+            image: jumbotron.background,
+            title: jumbotron.title,
+            subtitle: jumbotron.subtitle,
         }) }}
     </div>
 
