--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
     <div class="mb-5">
         {{ component('jumbotron', {
-            image: asset('build/images/jumbotron/jumbotron-contact.jpg'),
+            class: 'main-jumbotron',
+            background: asset('build/images/jumbotron/jumbotron-contact.jpg'),
             title: 'Contactez-moi',
         }) }}
     </div>
