feat(title): révision sur le titre des onglets de chaque page

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contactez-moi | {{ parent() }}{% endblock %}
 
 {% block body %}
     <div class="mb-5">
