feat(topbar): design de la topbar sur la page de connexion

--- a/assets/styles/components/_cards.scss
+++ b/assets/styles/components/_cards.scss
@@ -1,6 +1,6 @@
 .card.card-connexion {
   max-width: 500px;
-  margin: 3rem auto 5rem auto;
+  margin: 5rem auto 5rem auto !important;
 
   .card-title {
     text-align: center;
