--- a/assets/styles/components/_navbars.scss
+++ b/assets/styles/components/_navbars.scss
@@ -16,4 +16,13 @@
     padding-bottom: 0.25rem;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
   }
+
+  &.unscrollable {
+    @extend .sticky-top;
+    @extend .navbar-light;
+    @extend .bg-light;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  }
 }
