--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Connexion | {{ parent() }}{% endblock %}
 
+{% block topbar %}
+    {{ component('topbar', {
+        scrollable: false,
+    }) }}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="card card-connexion">
