--- a/templates/.components/navbars/topbar.html.twig
+++ b/templates/.components/navbars/topbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="topbar navbar" data-controller="topbar" data-topbar-scroll-value="200">
+<nav class="topbar navbar" data-controller="topbar" data-topbar-scroll-value="200" data-topbar-scrollable-value="{{ scrollable ? 1 : 0 }}">
     <div class="container">
         <a class="navbar-brand" href="{{ path('app_home') }}">
             <img src="{{ asset('images/logo-topbar.png') }}" alt="Logo">
