--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,6 +17,7 @@
 
 // Import elements
 @import "~bootstrap/scss/type";
+@import "~bootstrap/scss/transitions";
 
 // Import objects
 @import "~bootstrap/scss/containers";
@@ -30,11 +31,12 @@
 // Import components
 @import "~bootstrap/scss/alert";
 @import "~bootstrap/scss/card";
+@import "~bootstrap/scss/carousel";
+@import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/list-group";
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/carousel";
 @import "components/blocs";
 @import "components/cards";
 @import "components/carousel";
