--- a/templates/.components/slideshows/gallery-slideshow.html.twig
+++ b/templates/.components/slideshows/gallery-slideshow.html.twig
@@ -1,8 +1,8 @@
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carousel-controls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
         {% for media in gallery.medias %}
             <button type="button"
-                    data-bs-target="#carouselExampleControls"
+                    data-bs-target="#carousel-controls"
                     class="{{ loop.first ? 'active' : '' }}"
                     data-bs-slide-to="{{ loop.index - 1 }}"></button>
         {% endfor %}
@@ -14,10 +14,10 @@
             </div>
         {% endfor %}
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-controls" data-bs-slide="prev">
         <i class="fas fa-2x fa-chevron-left"></i>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel-controls" data-bs-slide="next">
         <i class="fas fa-2x fa-chevron-right"></i>
     </button>
 </div>
