feat(service): ajout des liens en page d'accueil

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -27,6 +27,7 @@
 @import "~bootstrap/scss/buttons";
 @import "objects/footer";
 @import "objects/google-review";
+@import "objects/link";
 
 // Import components
 @import "~bootstrap/scss/alert";
